Handling ctrl+c, ctrl+d, minishell in fork, add ft_bzero

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@ SRCS_BASE			= $(addprefix base/, cinstr.c free_str_array.c ft_atoi.c \
 					ft_calloc.c ft_isdigit.c ft_itoa.c ft_itoa_copy.c ft_split.c ft_strcmp.c \
 					ft_strdup.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c \
 					ft_strndup.c skip_spaces.c square.c str_array_size.c ft_strccmp.c \
-					ft_isalpha.c ft_isalphanum.c ft_strccpy.c ft_isspace.c)
+					ft_isalpha.c ft_isalphanum.c ft_strccpy.c ft_isspace.c ft_bzero.c)
 SRCS_BASE			+= $(addprefix base/, ft_lst_addback.c ft_lst_addfront.c ft_lst_iter.c \
 					ft_lst_last.c ft_lst_new.c ft_lst_purge.c ft_lst_size.c ft_lst_remove.c)
 OBJS_BASE			= ${SRCS_BASE:.c=.o}
